Removed Right Align and Fixed With of Inputs.
The Sign In Page currently aligns each label to the right.
This change removes that and assures that the password and
text input boxes are the same width.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -678,7 +678,6 @@ div.field {
     right: 10px;
   }
   width: 150px;
-  text-align: right;
   flex-shrink: 0;
 
   .field_with_errors {
@@ -708,7 +707,8 @@ div.field {
     }
   }
 
-  [type="text"] {
+  [type="text"],
+  [type="password"] {
     min-width: 300px;
   }
 }
